<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    android:outlineSpotShadowColor="#000000"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/question_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="245dp"

                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/true_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:text="@string/true_button" />


                    <Button
                        android:id="@+id/false_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:text="@string/false_button" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:contentDescription="@string/back_button"
                        android:drawableRight="@drawable/baseline_keyboard_arrow_left_black_24dp"
                        android:text="@string/back_button"
                        app:icon="@drawable/baseline_keyboard_arrow_left_black_24dp" />


                    <Button
                        android:id="@+id/deceit_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:outlineAmbientShadowColor="@color/black"
                        android:outlineSpotShadowColor="@color/black"
                        android:text="@string/deceit_button"
                        app:rippleColor="@color/black" />

                    <Button
                        android:id="@+id/next_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:contentDescription="@string/next_button"
                        android:drawableRight="@drawable/baseline_keyboard_arrow_right_black_24dp"
                        android:text="@string/next_button"
                        android:drawablePadding="4dp"
                        android:gravity="center"

                    app:icon="@drawable/baseline_keyboard_arrow_right_black_24dp" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
